anagram/target/debug/build/eyre-7a7d1517b79e4b3d/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/antoine/dev/kata/anagram/target/debug/build/eyre-7a7d1517b79e4b3d/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
